--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "orders"]
 	path = orders
 	url = https://github.com/agriCulturaVerde/orders.git
+[submodule "payment"]
+	path = payment
+	url = https://github.com/agriCulturaVerde/payment.git
